package common.dto_model;

import java.io.Serializable;

public interface DTO extends Serializable {

    /**
     * Interface implemented by all that objects that are a simplified version of the model.
     * They are used to transfer info in a secure way to clients, avoiding to expose server objects on the net.
     */

}
