package common.enums;

public enum ViewMethodsEnum {
    ACK,
    ERROR,
    NOTIFY_EVENT,
    REQUEST,
    ON_GAME_BOARD_UPDATE,
    ON_KILL_SHOT_TRACK_UPDATE,
    ON_PC_BOARD_UPDATE,
    ON_PC_UPDATE,
    ON_SQUARE_UPDATE,
    CHAT_MESSAGE,
    RESUME_GAME,
    WINNERS,
    CLOSE
}
