package common.exceptions;

public class FullyArmedException extends Throwable {
    public FullyArmedException(String s) {
    }
}
