package enums;

/**
 * Enumerates the 4 cardinal directions
 */
public enum CardinalDirectionEnum {
    NORTH,
    EAST,
    SOUTH,
    WEST
}
