package exceptions;

public class EmptySquareException extends Throwable {
}
