package exceptions;

public class NotCurrPlayerException extends Throwable {
}
