package exceptions;

public class NotEnoughAmmoException extends Throwable {
}
