@startuml

title __COMMON's Class Diagram__\n

  namespace common {
    abstract class common.AbstractSocketProxy {
    }
  }
  

  namespace common {
    class common.Constants {
    }
  }
  

  namespace common {
    class common.ModelEventDeserializer {
    }
  }
  

  namespace common {
    abstract class common.PropertyLoader {
    }
  }
  

  namespace common {
    namespace dto_model {
      abstract class common.dto_model.AbstractCardDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.AmmoTileDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      interface common.dto_model.DTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.GameBoardDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.GameDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.KillShotDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.KillShotTrackDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.LobbyDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.PcBoardDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.PcDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.PowerUpCardDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.SquareDTO {
      }
    }
  }
  

  namespace common {
    namespace dto_model {
      class common.dto_model.WeaponCardDTO {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum AmmoEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum CardinalDirectionEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum ConnectionMethodEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum ControllerMethodsEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum PcColourEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum SquareColourEnum {
      }
    }
  }
  

  namespace common {
    namespace enums {
      enum ViewMethodsEnum {
      }
    }
  }
  

  namespace common {
    namespace events {
      interface common.events.ModelEvent {
      }
    }
  }
  

  namespace common {
    namespace events {
      interface common.events.ModelEventListener {
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace game_board_events {
        abstract class common.events.game_board_events.GameBoardEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace game_board_events {
        class common.events.game_board_events.GameBoardSetEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace kill_shot_track_events {
        class common.events.kill_shot_track_events.FinalFrenzyEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace kill_shot_track_events {
        abstract class common.events.kill_shot_track_events.KillShotTrackEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace kill_shot_track_events {
        class common.events.kill_shot_track_events.KillShotTrackSetEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace lobby_events {
        abstract class common.events.lobby_events.LobbyEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace lobby_events {
        class common.events.lobby_events.PlayerJoinedEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        class common.events.pc_board_events.AmmoChangedEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        class common.events.pc_board_events.DamageMarksTakenEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        class common.events.pc_board_events.DeathEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        class common.events.pc_board_events.NumberOfDeathIncreasedEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        abstract class common.events.pc_board_events.PcBoardEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_board_events {
        class common.events.pc_board_events.PointsIncreasedEvents {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.AdrenalineUpEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.CollectEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.MovementEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PcColourChosenEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        abstract class common.events.pc_events.PcEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PowerUpDiscardedEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.PowerUpDrownEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace pc_events {
        class common.events.pc_events.SpawnEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace requests {
        class common.events.requests.Request {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace square_events {
        class common.events.square_events.ItemCollectedEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace square_events {
        abstract class common.events.square_events.SquareEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace square_events {
        class common.events.square_events.SquareRefilledEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace square_events {
        class common.events.square_events.TargetableSetEvent {
        }
      }
    }
  }
  

  namespace common {
    namespace exceptions {
      class common.exceptions.EmptySquareException {
      }
    }
  }
  

  namespace common {
    namespace exceptions {
      class common.exceptions.FullyArmedException {
      }
    }
  }
  

  namespace common {
    namespace exceptions {
      class common.exceptions.NotCurrPlayerException {
      }
    }
  }
  

  namespace common {
    namespace exceptions {
      class common.exceptions.NotEnoughAmmoException {
      }
    }
  }
  

  namespace common {
    namespace exceptions {
      class common.exceptions.PlayerAlreadyLoggedInException {
      }
    }
  }
  

  namespace common {
    namespace remote_interfaces {
      interface common.remote_interfaces.RemoteLoginController {
      }
    }
  }
  

  namespace common {
    namespace remote_interfaces {
      interface common.remote_interfaces.RemotePlayer {
      }
    }
  }
  

  namespace common {
    namespace remote_interfaces {
      interface common.remote_interfaces.RemoteView {
      }
    }
  }
  

  common.ModelEventDeserializer .up.|> com.google.gson.JsonDeserializer
  common.dto_model.AbstractCardDTO .up.|> common.dto_model.DTO
  common.dto_model.AmmoTileDTO .up.|> common.dto_model.DTO
  common.dto_model.GameBoardDTO .up.|> common.dto_model.DTO
  common.dto_model.GameDTO o-- common.dto_model.GameBoardDTO : gameBoardDTO
  common.dto_model.GameDTO o-- common.dto_model.KillShotTrackDTO : killShotTrackDTO
  common.dto_model.KillShotDTO .up.|> common.dto_model.DTO
  common.dto_model.KillShotDTO o-- common.enums.PcColourEnum : colour
  common.dto_model.KillShotTrackDTO .up.|> common.dto_model.DTO
  common.dto_model.LobbyDTO .up.|> common.dto_model.DTO
  common.dto_model.PcBoardDTO .up.|> common.dto_model.DTO
  common.dto_model.PcBoardDTO o-- common.enums.PcColourEnum : colour
  common.dto_model.PcDTO .up.|> common.dto_model.DTO
  common.dto_model.PcDTO o-- common.enums.PcColourEnum : colour
  common.dto_model.PcDTO o-- common.dto_model.PcBoardDTO : pcBoard
  common.dto_model.PowerUpCardDTO -up-|> common.dto_model.AbstractCardDTO
  common.dto_model.PowerUpCardDTO o-- common.enums.AmmoEnum : colour
  common.dto_model.SquareDTO .up.|> common.dto_model.DTO
  common.dto_model.SquareDTO o-- common.dto_model.AmmoTileDTO : ammoTile
  common.dto_model.SquareDTO o-- common.enums.SquareColourEnum : colour
  common.dto_model.WeaponCardDTO -up-|> common.dto_model.AbstractCardDTO
  common.enums.PcColourEnum .up.|> java.io.Serializable
  common.events.game_board_events.GameBoardEvent .up.|> common.events.ModelEvent
  common.events.game_board_events.GameBoardEvent o-- common.dto_model.GameBoardDTO : gameBoard
  common.events.game_board_events.GameBoardSetEvent -up-|> common.events.game_board_events.GameBoardEvent
  common.events.kill_shot_track_events.FinalFrenzyEvent -up-|> common.events.kill_shot_track_events.KillShotTrackEvent
  common.events.kill_shot_track_events.KillShotTrackEvent .up.|> common.events.ModelEvent
  common.events.kill_shot_track_events.KillShotTrackEvent o-- common.dto_model.KillShotTrackDTO : killShotTrack
  common.events.kill_shot_track_events.KillShotTrackSetEvent -up-|> common.events.kill_shot_track_events.KillShotTrackEvent
  common.events.lobby_events.LobbyEvent .up.|> java.io.Serializable
  common.events.lobby_events.LobbyEvent o-- common.dto_model.LobbyDTO : lobby
  common.events.lobby_events.PlayerJoinedEvent -up-|> common.events.lobby_events.LobbyEvent
  common.events.pc_board_events.AmmoChangedEvent -up-|> common.events.pc_board_events.PcBoardEvent
  common.events.pc_board_events.DamageMarksTakenEvent -up-|> common.events.pc_board_events.PcBoardEvent
  common.events.pc_board_events.DeathEvent -up-|> common.events.pc_board_events.PcBoardEvent
  common.events.pc_board_events.NumberOfDeathIncreasedEvent -up-|> common.events.pc_board_events.PcBoardEvent
  common.events.pc_board_events.PcBoardEvent .up.|> common.events.ModelEvent
  common.events.pc_board_events.PcBoardEvent o-- common.dto_model.PcBoardDTO : pcBoard
  common.events.pc_board_events.PointsIncreasedEvents -up-|> common.events.pc_board_events.PcBoardEvent
  common.events.pc_events.AdrenalineUpEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.CollectEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.MovementEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PcColourChosenEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PcEvent .up.|> common.events.ModelEvent
  common.events.pc_events.PcEvent o-- common.dto_model.PcDTO : pc
  common.events.pc_events.PowerUpDiscardedEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PowerUpDiscardedEvent o-- common.dto_model.PowerUpCardDTO : powerUp
  common.events.pc_events.PowerUpDrownEvent -up-|> common.events.pc_events.PcEvent
  common.events.pc_events.PowerUpDrownEvent o-- common.dto_model.PowerUpCardDTO : powerUp1
  common.events.pc_events.PowerUpDrownEvent o-- common.dto_model.PowerUpCardDTO : powerUp2
  common.events.pc_events.SpawnEvent -up-|> common.events.pc_events.PcEvent
  common.events.square_events.ItemCollectedEvent -up-|> common.events.square_events.SquareEvent
  common.events.square_events.ItemCollectedEvent o-- common.enums.PcColourEnum : pcColour
  common.events.square_events.SquareEvent .up.|> common.events.ModelEvent
  common.events.square_events.SquareEvent o-- common.dto_model.SquareDTO : square
  common.events.square_events.SquareRefilledEvent -up-|> common.events.square_events.SquareEvent
  common.events.square_events.TargetableSetEvent -up-|> common.events.square_events.SquareEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
